Experimenting with c++ linkers and Python bindings

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ __pycache__/
 *.lo
 *.o
 *.obj
+*.so
 
 # Precompiled Headers
 *.gch
@@ -143,6 +144,7 @@ env.bak/
 venv.bak/
 temp_data/
 *.xml.py
+.vscode
 
 # Spyder project settings
 .spyderproject
